Closed Bug 1392617 Opened 8 years ago Closed 8 years ago

Windows Thread Functions return (DWORD)-1 not -1 and it causes a signedness warning

Categories

(Core :: XPCOM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox57 --- fixed

People

(Reporter: tjr, Assigned: tjr)

References

Details

(Whiteboard: [tor])

Attachments

(1 file)

Attachment #8899830 - Flags: review?(aklotz)
Comment on attachment 8899830 [details] Bug 1392617 Fix comparison between signed and unsigned integer expressions https://reviewboard.mozilla.org/r/171152/#review176356
Attachment #8899830 - Flags: review?(aklotz) → review+
Pushed by aklotz@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/1fdd12bde0fd Fix comparison between signed and unsigned integer expressions r=aklotz
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
No longer blocks: 1330608
Blocks: 1394433
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: