Bug 1392617 Fix comparison between signed and unsigned integer expressions r=aklotz

The return of these functions is actually (DWORD) –1

MozReview-Commit-ID: 112d6BTBt8O